--- a/lab1_web.html
+++ b/lab1_web.html
@@ -61,58 +61,23 @@
     gap: 5px;
     border: 2px solid white;
     padding: 5px;
+    margin-bottom: 10px;  /* пространство для иконки */
 }
 
-.grid-item {
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    border: 1px solid white;
-    color: white;
-    font-weight: bold;
+td{
+     
+     width: 30px; 
+     height:30px; 
+     border: solid 1px silver; 
+     text-align:center;
+      }
+.icon-section {
+    text-align: right;
+}
+
+.icon {
     width: 30px;
     height: 30px;
-}
-.grid-item:first-child(1) {
-    grid-column: 1 ; 
-    grid-rows: 2;
-}
-
-.grid-item:nth-child(2) {
-    grid-column: 2 ; 
-    grid-rows: 1;
-}
-
-.grid-item:nth-child(3) {
-    grid-column: 3;
-    grid-rows: 1;     
-}
-
-.grid-item:nth-child(4) {
-    grid-column: 2; 
-    grid-rows: 2;
-}
-
-.grid-item:nth-child(5) {
-    grid-column: 3; 
-    grid-rows: 2;
-}
-
-.grid-item:nth-child(6) {
-    grid-column: 1; 
-    grid-rows: 2;
-}
-
-.grid-item:last-child(7) {
-    grid-column: span 2;
-}
-
-.grid-item.green {
-    background-color: #008000;
-}
-
-.grid-item.red {
-    background-color: #ff0000;
 }
    </style>
   </head>
@@ -153,16 +118,22 @@
             </ul>
         </div>
 
-        <div class="grid-container">
-            <div class="grid-item green">1</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item red">7</div>
-        </div>
-	<img src="images.png"; position= "100px bottom">
+        <table>
+            <tr>
+                <td rowspan="2" style="background-color:green;">1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td colspan="2" style="background-color:red;">7</td>
+            </tr>
+        </table>
+
     </div>
 </div>
 
