--- a/lab1_web.html
+++ b/lab1_web.html
@@ -12,7 +12,7 @@
     font-family: Courier New;
 	}
     .block2 { 
-    width: 400px;
+    width: 450px;
     height: 610px;
     background: #0000FF;
     padding: 30px;
@@ -51,25 +51,16 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 1000px;
+    max-height: 1000px;
 	}
 
-td{
-     
+td{     
      width: 30px; 
      height:30px; 
-     border: solid 1px silver; 
-     text-align: center;
+     border: solid 1px silver;
       }
-.icon-section {
-    text-align: right;
-}
 
-.icon {
-    width: 30px;
-    height: 30px;
-}
    </style>
   </head>
 
@@ -110,21 +101,21 @@ td{
         </div>
 	
         <table style="border: solid 1px silver">
-            <tr>
+            <tr valign="bottom" align="center">
                 <td rowspan="2" style="background-color:green;">1</td>
                 <td>2</td>
                 <td>3</td>
             </tr>
-            <tr>
+            <tr valign="bottom" align="center">
                 <td>4</td>
                 <td>5</td>
             </tr>
-            <tr>
+            <tr valign="bottom" align="center">
                 <td>6</td>
                 <td colspan="2" style="background-color:red;">7</td>
             </tr>
-        </table>
-	</div>
+        </table>	
+	</div><div style="text-align: right"><img src="images.png"></div>
     </div>
 </div>
 
