Перемещение таблицы чисел и изменение размера ее ячеек

--- a/lab1_web.html
+++ b/lab1_web.html
@@ -18,7 +18,7 @@
     padding: 30px;
     color: #FFFFFF;
     font-family:Arial, sans-serif;
-    font-size:90%;
+    font-size:80%;
     margin: 10px auto;  
    	}
     .block3 {
@@ -29,8 +29,8 @@
     font-family: Arial;
 	}
    .square {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border: 5px solid #ffffff;
     border-radius: 15px 0px;
     float: left;
@@ -38,7 +38,7 @@
     margin-bottom: 15px;
 	}
    .text-section {
-    max-width: 50%;
+    max-width: 70%;
 	}
     .ul {
     list-style: none;
@@ -51,13 +51,13 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 1000px;
-    max-height: 1000px;
+    max-width: 500px;
+    height: 120px;
 	}
 
 td{     
-     width: 30px; 
-     height:30px; 
+     width: 35px; 
+     height:25px; 
      border: solid 1px silver;
       }
 
@@ -75,7 +75,7 @@ td{
       desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    <p>
     <center>	
-      <a style="color:#FF0000" href=https://tsu.ru/> www.tsu.ru </a>
+      <a style="color:#FF0000" href=https://tsu.ru/> www.csd.tsu.ru </a>
     </center>
     
     <h2>
@@ -90,7 +90,7 @@ td{
     </ul>
 
     <div class="container">
-        <div class="text-section">
+	 <div class="text-section">
             <h2>Here are some visual styles:</h2>
             <ul class="ul">
                 <li><i>Italic</i></li>
@@ -99,8 +99,8 @@ td{
                 <li><span style="text-decoration: line-through;">Line through</span></li>
             </ul>
         </div>
-	
-        <table style="border: solid 1px silver">
+
+        <table style="border: solid 1px silver; transform: translate(0,20px);">
             <tr valign="bottom" align="center">
                 <td rowspan="2" style="background-color:green;">1</td>
                 <td>2</td>
