Удаление лишних пробелов

--- a/lab1_web.html
+++ b/lab1_web.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>Website</title>
+  <title>Website</title>
   <style type="text/css">
     .block1 {
     padding: 10px;
@@ -73,9 +72,9 @@ td{
      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
       It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
       desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-   <p>
+   </p>
 
-    <center>	
+    <center>
       <a style="color:#FF0000" href=https://tsu.ru/> www.csd.tsu.ru </a>
     </center>
     
@@ -101,17 +100,17 @@ td{
             </ul>
         </div>
 
-        <table style="border: solid 1px silver; transform: translate(0,20px);">
-            <tr valign="bottom" align="center">
+        <table style="border: solid 1px silver; transform: translate(0,20px)">
+            <tr valign="bottom"; align="center">
                 <td rowspan="2" style="background-color:green;">1</td>
                 <td>2</td>
                 <td>3</td>
             </tr>
-            <tr valign="bottom" align="center">
+            <tr valign="bottom"; align="center">
                 <td>4</td>
                 <td>5</td>
             </tr>
-            <tr valign="bottom" align="center">
+            <tr valign="bottom"; align="center">
                 <td>6</td>
                 <td colspan="2" style="background-color:red;">7</td>
             </tr>
@@ -119,8 +118,6 @@ td{
 	</div><div style="text-align: right"><img src="images.png"></div>
     </div>
 </div>
-
-<footer class="block3"> Hello, footer!</footer> 
-  
-  </body>
+<footer class="block3"> Hello, footer!</footer>   
+</body>
 </html>
